android: Detailで削除実装（確認メッセージなし）

--- a/android/app/src/main/res/menu/book_detail.xml
+++ b/android/app/src/main/res/menu/book_detail.xml
@@ -2,8 +2,15 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/delete_book"
+        android:icon="@drawable/ic_action_discard"
+        android:showAsAction="always"
+        android:title="削除" />
+
+    <item
         android:id="@+id/save_book"
         android:icon="@drawable/ic_action_save"
         android:showAsAction="always"
         android:title="保存" />
+
 </menu>
