android: Detailで線の太さメニューをレイアウトに追加

--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -19,8 +19,8 @@
         android:layout_centerHorizontal="true" />
 
     <view xmlns:one-liners="http://schemas.android.com/apk/res-auto"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         class="jp.caliconography.one_liners.widget.PopupMenu"
         android:id="@+id/color_popup"
         android:layout_toEndOf="@+id/load_image"
@@ -29,6 +29,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         one-liners:item_interval="100.0" />
+
+    <view xmlns:one-liners="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        class="jp.caliconography.one_liners.widget.PopupMenu"
+        android:id="@+id/line_width_popup"
+        android:layout_toEndOf="@+id/color_popup"
+        one-liners:item_interval="100.0"
+        android:layout_alignBottom="@+id/photo"
+        android:layout_toRightOf="@+id/color_popup" />
 
     <LinearLayout
         android:id="@+id/progress_container"
