--- a/android/app/src/main/res/menu/photo_detail.xml
+++ b/android/app/src/main/res/menu/photo_detail.xml
@@ -2,6 +2,12 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/new_photo"
+        android:icon="@drawable/ic_action_new"
+        android:showAsAction="always"
+        android:title="新規作成" />
+
+    <item
         android:id="@+id/save_photo"
         android:icon="@drawable/ic_action_save"
         android:showAsAction="always"
