--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -4,33 +4,6 @@
     android:layout_height="fill_parent">
 
 
-    <EditText
-        android:id="@+id/txt_review"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/txt_author"
-        android:layout_gravity="right|bottom"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
-        android:hint="review"
-        android:maxLength="140"
-        android:selectAllOnFocus="true"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/txt_review"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:text="公開する" />
-
     <com.parse.ParseImageView
         android:id="@+id/book_photo"
         android:layout_width="match_parent"
@@ -45,38 +18,91 @@
         <requestFocus />
     </com.parse.ParseImageView>
 
-    <TextView
-        android:id="@+id/txt_title"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/book_photo"
-        android:layout_marginLeft="8dp"
-        android:layout_toLeftOf="@+id/btn_search_book"
-        android:hint="title"
-        android:padding="4dp"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_alignRight="@+id/book_photo"
+        android:layout_alignEnd="@+id/book_photo"
+        android:layout_alignLeft="@+id/book_photo"
+        android:id="@+id/relativeLayout">
 
-    <TextView
-        android:id="@+id/txt_author"
+        <FrameLayout
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="false"
+            android:id="@+id/frameLayout">
+
+            <view
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                class="jp.caliconography.one_liners.widget.DynamicHeightPicassoImageView"
+                android:id="@+id/book_thumbnail" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/txt_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="title"
+            android:padding="4dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_toEndOf="@+id/frameLayout"
+            android:layout_toRightOf="@+id/frameLayout"
+            android:layout_toLeftOf="@+id/btn_search_book" />
+
+        <TextView
+            android:id="@+id/txt_author"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/btn_search_book"
+            android:hint="author"
+            android:padding="4dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_below="@+id/txt_title"
+            android:layout_toEndOf="@+id/frameLayout"
+            android:layout_toRightOf="@+id/frameLayout" />
+
+        <ImageButton
+            android:id="@+id/btn_search_book"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/btn_oval_common_back"
+            android:padding="4dp"
+            android:src="@drawable/ic_action_search"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignRight="@+id/frameLayout" />
+
+    </RelativeLayout>
+
+    <EditText
+        android:id="@+id/txt_review"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_title"
-        android:layout_marginLeft="8dp"
-        android:layout_toLeftOf="@+id/btn_search_book"
-        android:hint="author"
-        android:padding="4dp"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_gravity="right|bottom"
+        android:hint="review"
+        android:maxLength="140"
+        android:selectAllOnFocus="true"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignStart="@+id/relativeLayout"
+        android:layout_alignRight="@+id/relativeLayout"
+        android:layout_alignEnd="@+id/relativeLayout" />
 
-    <ImageButton
-        android:id="@+id/btn_search_book"
+    <Switch
+        android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/book_photo"
-        android:layout_alignRight="@+id/book_photo"
-        android:layout_below="@+id/book_photo"
-        android:layout_margin="8dp"
-        android:background="@drawable/btn_oval_common_back"
-        android:padding="4dp"
-        android:src="@drawable/ic_action_search" />
+        android:layout_below="@+id/txt_review"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:paddingBottom="8dp"
+        android:text="公開する"
+        android:layout_alignRight="@+id/txt_review"
+        android:layout_alignEnd="@+id/txt_review" />
 
 </RelativeLayout>
