--- a/android/app/src/main/res/layout/fragment_book_detail.xml
+++ b/android/app/src/main/res/layout/fragment_book_detail.xml
@@ -7,43 +7,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:padding="8dp">-->
+
+        <!--<view-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--class="com.etsy.android.grid.util.DynamicHeightImageView"-->
+        <!--android:id="@+id/view"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true" />-->
+
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:padding="8dp">
+            style="@style/card.main_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!--<view-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--class="com.etsy.android.grid.util.DynamicHeightImageView"-->
-            <!--android:id="@+id/view"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_alignParentStart="true" />-->
-
-            <LinearLayout
-                style="@style/card.main_layout"
-                android:layout_width="fill_parent"
+            <it.gmariotti.cardslib.library.view.CardViewNative xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_book_detail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="4dp"
+                android:padding="4dp"
+                card:card_layout_resourceID="@layout/card_book_detail" />
 
-                <it.gmariotti.cardslib.library.view.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:card="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_book_detail"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    card:card_layout_resourceID="@layout/card_book_detail" />
+            <!--</LinearLayout>-->
 
-            </LinearLayout>
-
-            <it.gmariotti.cardslib.library.view.component.CardShadowView
-                android:id="@+id/card_shadow_layout"
-                style="@style/card.shadow_outer_layout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+            <!--<it.gmariotti.cardslib.library.view.component.CardShadowView-->
+            <!--android:id="@+id/card_shadow_layout"-->
+            <!--style="@style/card.shadow_outer_layout"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
         </LinearLayout>
 
