--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -28,8 +28,8 @@
         android:id="@+id/relativeLayout">
 
         <FrameLayout
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="85dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="false"
             android:id="@+id/frameLayout">
@@ -38,7 +38,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 class="jp.caliconography.one_liners.widget.DynamicHeightPicassoImageView"
-                android:id="@+id/book_thumbnail" />
+                android:id="@+id/book_thumbnail"
+                android:cropToPadding="false" />
 
         </FrameLayout>
 
@@ -76,6 +77,14 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignRight="@+id/frameLayout" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/move_to_rakuten"
+            android:layout_below="@+id/txt_author"
+            android:layout_toLeftOf="@+id/btn_search_book"
+            android:layout_toStartOf="@+id/btn_search_book" />
 
     </RelativeLayout>
 
