android: Detailに楽天ブックスボタン

--- a/android/app/src/main/res/values/styles_cardslib.xml
+++ b/android/app/src/main/res/values/styles_cardslib.xml
@@ -164,4 +164,15 @@
     <style name="card.content_outer_layout.staggered">
         <item name="android:minHeight">20dp</item>
     </style>
+
+
+    <!--abe at 2014/11/24-->
+    <style name="card.native.card_thumbnail_image">
+        <item name="android:layout_width">@dimen/card_thumbnail_width</item>
+        <item name="android:layout_height">@dimen/card_thumbnail_height</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
 </resources>
