--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -79,12 +79,19 @@
             android:layout_alignRight="@+id/frameLayout" />
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="128dp"
+            android:layout_height="32dp"
             android:id="@+id/move_to_rakuten"
             android:layout_below="@+id/txt_author"
-            android:layout_toLeftOf="@+id/btn_search_book"
-            android:layout_toStartOf="@+id/btn_search_book" />
+            android:src="@drawable/rakuten_books_logo"
+            android:background="@drawable/btn_rect_common_back"
+            android:scaleType="centerInside"
+            android:padding="4dp"
+            android:layout_alignRight="@+id/btn_search_book"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp" />
 
     </RelativeLayout>
 
