--- a/android/app/src/main/res/values/dimens_cardslib.xml
+++ b/android/app/src/main/res/values/dimens_cardslib.xml
@@ -30,7 +30,6 @@
     <dimen name="demo_title_section_textsize">18sp</dimen>
 
 
-
     <!--  Card customization ***************************************************  -->
 
     <!-- Card -->
@@ -46,5 +45,15 @@
     <dimen name="carddemo_extras_basestaggered_height1">120dp</dimen>
     <dimen name="carddemo_extras_basestaggered_height2">150dp</dimen>
     <dimen name="carddemo_extras_basestaggered_height3">180dp</dimen>
+
+    <!--abe at 2014/11/24-->
+    <dimen name="native_list_card_margin_bottom">0dp</dimen>
+    <dimen name="native_list_card_margin_left">2dp</dimen>
+    <dimen name="native_list_card_margin_right">2dp</dimen>
+    <dimen name="native_list_card_margin_top">0dp</dimen>
+    <dimen name="card_thumbnail_height">84dp</dimen>
+    <dimen name="card_thumbnail_width">84dp</dimen>
+    <dimen name="card_main_content_native_default_paddingBottom">4dp</dimen>
+    <dimen name="card_main_content_native_default_paddingTop">4dp</dimen>
 
 </resources>
