--- a/android/app/src/main/res/values/styles_carddemo_extra.xml
+++ b/android/app/src/main/res/values/styles_carddemo_extra.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ *******************************************************************************
   ~   Copyright (c) 2013-2014 Gabriele Mariotti.
   ~
@@ -20,17 +19,23 @@
 <resources>
 
     <style name="Theme.Carddemo_extra" parent="@android:style/Theme.Holo.Light">
-        <item name="android:actionBarItemBackground">@drawable/selectable_background_carddemo_extra</item>
+        <item name="android:actionBarItemBackground">
+            @drawable/selectable_background_carddemo_extra
+        </item>
         <item name="android:popupMenuStyle">@style/PopupMenu.Carddemo_extra</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Carddemo_extra</item>
         <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Carddemo_extra</item>
         <item name="android:actionDropDownStyle">@style/DropDownNav.Carddemo_extra</item>
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Carddemo_extra</item>
         <item name="android:actionModeBackground">@drawable/cab_background_top_carddemo_extra</item>
-        <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_carddemo_extra</item>
-        <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Carddemo_extra</item>
-        
-        
+        <item name="android:actionModeSplitBackground">
+            @drawable/cab_background_bottom_carddemo_extra
+        </item>
+        <item name="android:actionModeCloseButtonStyle">
+            @style/ActionButton.CloseMode.Carddemo_extra
+        </item>
+
+
     </style>
 
     <style name="ActionBar.Solid.Carddemo_extra" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
@@ -46,7 +51,7 @@
     </style>
 
     <style name="PopupMenu.Carddemo_extra" parent="@android:style/Widget.Holo.Light.ListPopupWindow">
-        <item name="android:popupBackground">@drawable/menu_dropdown_panel_carddemo_extra</item>	
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_carddemo_extra</item>
     </style>
 
     <style name="DropDownListView.Carddemo_extra" parent="@android:style/Widget.Holo.Light.ListView.DropDown">
@@ -62,11 +67,11 @@
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_carddemo_extra</item>
         <item name="android:dropDownSelector">@drawable/selectable_background_carddemo_extra</item>
     </style>
-    
+
     <style name="ProgressBar.Carddemo_extra" parent="@android:style/Widget.Holo.Light.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_carddemo_extra</item>
     </style>
-    
+
     <style name="ActionButton.CloseMode.Carddemo_extra" parent="@android:style/Widget.Holo.Light.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_carddemo_extra</item>
     </style>
