--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:paddingBottom="16dp">
 
 
     <com.parse.ParseImageView
@@ -110,14 +111,15 @@
         android:layout_alignEnd="@+id/relativeLayout" />
 
     <Switch
-        android:id="@+id/switch1"
+        android:id="@+id/swc_share_scope"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_review"
-        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:paddingBottom="8dp"
         android:text="公開する"
+        android:textOn="公開"
+        android:textOff="自分のみ"
         android:layout_alignRight="@+id/txt_review"
         android:layout_alignEnd="@+id/txt_review" />
 
