--- a/android/app/src/main/res/drawable/btn_rect_common_border.xml
+++ b/android/app/src/main/res/drawable/btn_rect_common_border.xml
@@ -6,4 +6,5 @@
         android:color="#aaa"
         android:width="1dp" />
     <solid android:color="#efefef" />
+    <corners android:radius="2dp" />
 </shape>
