--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="quote_mark_width">60dp</dimen>
     <dimen name="quote_mark_height">60dp</dimen>
+    <dimen name="popup_menu_item_width">32dp</dimen>
+    <dimen name="popup_menu_item_height">32dp</dimen>
 </resources>
