android: 写真がないときはquoteマークを非表示に。

--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -131,6 +131,7 @@
         android:layout_alignRight="@+id/book_photo"
         android:layout_margin="16dp"
         android:src="@drawable/quote"
-        android:scaleType="fitStart" />
+        android:scaleType="fitStart"
+        android:visibility="gone" />
 
 </RelativeLayout>
