--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -21,7 +21,8 @@
         one-liners:item_height="@dimen/popup_menu_item_height"
         one-liners:item_width="@dimen/popup_menu_item_width"
         android:layout_alignBottom="@+id/photo"
-        android:layout_toRightOf="@+id/color_popup" />
+        android:layout_toRightOf="@+id/color_popup"
+        android:layout_margin="8dp" />
 
     <LinearLayout
         android:id="@+id/progress_container"
@@ -57,6 +58,7 @@
         one-liners:item_height="@dimen/popup_menu_item_height"
         one-liners:item_width="@dimen/popup_menu_item_width"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/progress_container" />
+        android:layout_toRightOf="@+id/progress_container"
+        android:layout_margin="8dp" />
 
 </RelativeLayout>
