--- a/android/app/src/main/res/drawable/btn_oval_common_front.xml
+++ b/android/app/src/main/res/drawable/btn_oval_common_front.xml
@@ -5,5 +5,5 @@
     <stroke
         android:color="@color/btn_common_stroke"
         android:width="1dp" />
-    <solid android:color="#cdcdcd" />
+    <solid android:color="#00abab" />
 </shape>
