--- a/android/app/src/main/res/drawable/btn_rect_common_border_pressed.xml
+++ b/android/app/src/main/res/drawable/btn_rect_common_border_pressed.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:color="#aaa"
+        android:color="@color/btn_common_stroke"
         android:width="1dp" />
     <solid android:color="#cdcdcd" />
     <corners android:radius="2dp" />
