--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="red">#fff10800</color>
     <color name="list_item_pressed">#1A000000</color>
 
-    <color name="btn_common_stroke">#aaa</color>
+    <color name="btn_common_stroke">#faaa</color>
 </resources>
