--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -6,6 +6,20 @@
     <color name="blue">#ff82e0ff</color>
     <color name="yellow">#fffffbae</color>
     <color name="red">#fff10800</color>
+
+    <color name="sysBlack">#FF000000</color>
+    <color name="sysBlue">#FF0000FF</color>
+    <color name="sysCyan">#FF00FFFF</color>
+    <color name="sysDkGray">#FF444444</color>
+    <color name="sysGray">#FF888888</color>
+    <color name="sysGreen">#FF00FF00</color>
+    <color name="sysLtGray">#FFCCCCCC</color>
+    <color name="sysMagenta">#FFFF00FF</color>
+    <color name="sysRed">#FFFF0000</color>
+    <color name="sysTransparent">#00000000</color>
+    <color name="sysWhite">#FFFFFFFF</color>
+    <color name="sysYellow">#FFFFFF00</color>
+
     <color name="list_item_pressed">#1A000000</color>
 
     <color name="btn_common_stroke">#faaa</color>
