--- a/android/app/src/main/res/layout/activity_book_detail.xml
+++ b/android/app/src/main/res/layout/activity_book_detail.xml
@@ -1,7 +1,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/book_detail_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".bookDetailActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="50dp"
+        android:background="@android:color/holo_blue_light" />
+
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/book_detail_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".bookDetailActivity"
+        tools:ignore="MergeRootFrame">
+
+    </FrameLayout>
+</FrameLayout>
