--- a/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
+++ b/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
@@ -36,9 +36,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_alignParentBottom="true">
 
-        <ProgressBar
+    <ProgressBar
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
