android: toolbar導入中（BookSearchでSearchできた）

--- a/android/app/src/main/res/layout/activity_book_list.xml
+++ b/android/app/src/main/res/layout/activity_book_list.xml
@@ -1,10 +1,28 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/book_list"
-    android:name="jp.caliconography.one_liners.BookListFragment"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dummy"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    tools:context=".bookListActivity"
-    tools:layout="@android:layout/list_content" />
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:minHeight="50dp" />
+
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/book_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".bookDetailActivity"
+        tools:ignore="MergeRootFrame"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+    </FrameLayout>
+
+</RelativeLayout>
+
