--- a/android/app/src/main/res/menu/book_search.xml
+++ b/android/app/src/main/res/menu/book_search.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
         android:id="@+id/search_view"
-    android:icon="@drawable/ic_action_search"
-        android:showAsAction="always"
-        android:title="書籍検索"
-        android:actionViewClass="android.widget.SearchView"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="always"
+        android:title="書籍検索" />
 </menu>
