--- a/android/app/src/main/res/menu/book_detail.xml
+++ b/android/app/src/main/res/menu/book_detail.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete_book"
         android:icon="@drawable/ic_action_discard"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="削除" />
 
     <item
         android:id="@+id/save_book"
         android:icon="@drawable/ic_action_save"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="保存" />
 
 </menu>
