--- a/android/app/src/main/res/menu/photo_detail.xml
+++ b/android/app/src/main/res/menu/photo_detail.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/new_photo"
         android:icon="@drawable/ic_action_new"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="新規作成" />
 
     <item
         android:id="@+id/save_photo"
         android:icon="@drawable/ic_action_save"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="保存" />
 </menu>
