android: PhotoDetailで背景をefefefに。

--- a/android/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_photo_detail.xml
@@ -9,7 +9,8 @@
         android:id="@+id/photo"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
 
     <view xmlns:one-liners="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
