--- a/android/app/src/main/res/layout/activity_book_detail.xml
+++ b/android/app/src/main/res/layout/activity_book_detail.xml
@@ -6,8 +6,8 @@
         android:id="@+id/toolbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:minHeight="50dp"
-        android:background="@android:color/holo_blue_light" />
+        android:background="@color/primary"
+        android:minHeight="?attr/actionBarSize" />
 
     <FrameLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/book_detail_container"
