--- a/android/app/src/main/res/layout/activity_book_list.xml
+++ b/android/app/src/main/res/layout/activity_book_list.xml
@@ -8,8 +8,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
-        android:minHeight="50dp" />
+        android:background="@color/primary"
+        android:minHeight="?attr/actionBarSize" />
 
     <FrameLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/book_list_container"
