--- a/android/app/src/main/res/layout/card_book_detail.xml
+++ b/android/app/src/main/res/layout/card_book_detail.xml
@@ -107,6 +107,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_below="@+id/relativeLayout"
         android:layout_alignStart="@+id/relativeLayout"
+        android:layout_alignLeft="@+id/relativeLayout"
         android:layout_alignRight="@+id/relativeLayout"
         android:layout_alignEnd="@+id/relativeLayout" />
 
