--- a/android/app/src/main/res/layout/carddemo_extras_staggered_inner_main.xml
+++ b/android/app/src/main/res/layout/carddemo_extras_staggered_inner_main.xml
@@ -33,17 +33,15 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/demoextra_card_background_color2"
-        android:id="@+id/carddemo_staggered_inner_title"
-        style="@style/card.base_simple_title"/>
+        android:textSize="@dimen/abc_text_size_small_material"
+        android:id="@+id/carddemo_staggered_inner_title" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/demo_card_staggered_subtitle"
-        android:id="@+id/carddemo_staggered_inner_subtitle"
-        style="@style/card.base_simple_title"/>
+        android:textSize="@dimen/abc_text_size_caption_material"
+        android:id="@+id/carddemo_staggered_inner_subtitle" />
 
 </LinearLayout>
