android: FloatingActionButtonの色変更、バージョンアップ

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -31,4 +31,5 @@
     <color name="primary_dark">#388E3C</color>
     <color name="accent">#FFD740</color>
     <color name="accent_pressed">#FFE57F</color>
+    <color name="ripple">#FFE57F</color>
 </resources>
