--- a/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
+++ b/android/app/src/main/res/layout/demo_extras_fragment_staggeredgrid.xml
@@ -20,6 +20,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -59,8 +60,8 @@
             card:item_margin="8dp"
             card:column_count_portrait="2"
             card:column_count_landscape="3"
-            card:grid_paddingRight="8dp"
-            card:grid_paddingLeft="8dp"
+            card:grid_paddingRight="0dp"
+            card:grid_paddingLeft="0dp"
             card:list_card_layout_resourceID="@layout/carddemo_extras_staggered_card"
             android:id="@+id/carddemo_extras_grid_stag" />
 
@@ -81,7 +82,8 @@
             android:layout_margin="16dp"
             android:src="@drawable/ic_action_content_new"
             fab:fab_colorNormal="@color/accent"
-            fab:fab_colorPressed="@color/accent_pressed" />
+            fab:fab_colorPressed="@color/accent_pressed"
+            fab:fab_colorRipple="@color/ripple" />
 
     </FrameLayout>
 
